<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.2">
  <POU Name="Emergency_Stop" Id="{f300e70c-0e77-4573-a64c-71791aff7c8c}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Emergency_Stop
VAR
	EmergencyStop_Fault	: BOOL;	
	tmrEmergencyStop	: Ton;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[
EmergencyStop_Fault	:= 	E_Estop_Panel		OR
						E_Estop_Collator	OR
						E_Estop_HorLeft		OR
						E_Estop_HorRight 	OR
						E_Estop_HorExit ;

tmrEmergencyStop (IN := (EmergencyStop_Fault AND I_Emg_SC_OK ) OR (NOT EmergencyStop_Fault AND not I_Emg_SC_OK ), pt:= T#1S);
(*
IF tmrEmergencyStop.Q THEN
E_EStop_SafetyBroken	:= TRUE;						
END_IF															
*)						
IF mc.ResetPressed THEN
	E_Estop_Panel			:= FALSE;
	E_Estop_Collator		:= FALSE;
	E_Estop_HorLeft			:= FALSE;
	E_Estop_HorRight		:= FALSE;
	E_Estop_HorExit			:= FALSE;
	E_EStop_SafetyBroken	:= FALSE;
END_IF

(*
IF NOT I_EStop_Panel THEN
	E_Estop_Panel		:= TRUE;
END_IF

IF NOT I_EStop_Collator THEN
	E_Estop_Collator	:= TRUE;
END_IF

IF NOT I_EStop_HorL THEN
	E_Estop_HorLeft		:= TRUE;
END_IF

IF NOT I_EStop_HorR THEN
	E_Estop_HorRight	:= TRUE;
END_IF

IF NOT I_EStop_HorExit THEN
	E_Estop_HorExit		:= TRUE;
END_IF
*)
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>